2001-02-08  Pavel Roskin  <proski@gnu.org>

	* tests/pr87.test: Check foo/Makfile.in after it is created.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* tests/pr87.test: Added check for blank line after `.c.o' rule.
	Report from Lars J. Aas.

2001-02-07  Lars J. Aas <larsa@sim.no>

	* lisp.am (install-@DIR@LISP): Removed extra space.
	* header.am (install-@DIR@HEADERS): Removed extra space.
	* data.am (install-@DIR@DATA): Removed extra space.

2001-02-07  Tom Tromey  <tromey@redhat.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Use \", not ".

	* automake.in (handle_dependencies): Use _am_include, not
	AMINCLUDE.
	* tests/exsource.test: Use _am_include, not AMINCLUDE.
	* m4/make.m4 (AM_MAKE_INCLUDE): Use _am_include, not AMINCLUDE.

	* tests/Makefile.am (XFAIL_TESTS): Removed distcommon.test.

	* tests/Makefile.am (EXTRA_DIST): Added ChangeLog-old.

	* automake.in (handle_configure): Handle case where output file is
	in subdir with no Makefile of its own.  Fixes remake3.test,
	distcommon.test.

2001-02-06  Pavel Roskin  <proski@gnu.org>

	* automake.in (handle_dependencies): Rename AM_INCLUDE to
	AMINCLUDE.
	* m4/make.m4 (AM_MAKE_INCLUDE): Likewise.
	* tests/exsource.test: Likewise.

2001-02-06  Derek Price  <derek.price@openavenue.com>

	* automake.in (handle_configure): Fix syntax error.

2001-02-06  Akim Demaille  <akim@epita.fr>

	* subdirs.am: This file is the exception: clean recursive targets
	are called by the clean targets, not the clean-am targets.
	Otherwise we have a circular dependency: clean -> clean-am ->
	clean-recursive -> clean.
	* automake.in (handle_clean): Bind `-local' targets to `-am'
	targets, not top targets.
	Don't declare -recursive dependencies of the clean targets:
	`subdirs.am' did it.  Less hard coded knowledge, transfered
	into...
	* clean.am: here.

2001-02-06  Akim Demaille  <akim@epita.fr>

	Monstro unsplitable patch.

	The aim is to remove hard coded knowledge about clean targets from
	automake.in, leaving them in the *.am files.