@@ -7097,7 +7097,12 @@ sub file_contents
 		      $result_rules .= "$targets:";
 		      $result_rules .= " $dependencies"
 			if $dependencies;
-		      $result_rules .= "\n$actions\n";
+		      $result_rules .= "\n";
+		      # Only add actions if we found some.  Otherwise
+		      # we can end up with a spurious newline.  See
+		      # pr87.test.
+		      $result_rules .= "$actions\n"
+			  if $actions;
 		    }
 		  $comment = $separator = '';
 		  last;
