@@ -1,3 +1,8 @@
+2001-02-08  Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (file_contents): Only add $actions if any are
+	found.  Fixes new failure in pr87.test.
+
 2001-02-08  Pavel Roskin  <proski@gnu.org>
 
 	* tests/pr87.test: Check foo/Makfile.in after it is created.
